--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>MyBord</title>
     <link rel="stylesheet" type="text/css" href="/app/application.css">
-    <link href="https://fonts.googleapis.com/css?family=Rokkitt:100,200,300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
