--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>MyBord</title>
-    <link rel="stylesheet" type="text/css" href="/app/application.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
-    <script src="/app/bundle.js"></script>
+    <script src="/bundle.js"></script>
     <script type="text/javascript" src="//fast.fonts.net/jsapi/d3695ba5-8b42-43cc-aefa-3a1168f5423b.js"></script>
   </body>
 </html>
