--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <script src="/app/bundle.js"></script>
     <script type="text/javascript" src="//fast.fonts.net/jsapi/d3695ba5-8b42-43cc-aefa-3a1168f5423b.js"></script>
   </body>
 </html>
