--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="app"></div>
     <script src="/app/bundle.js"></script>
-    <script type="text/javascript" src="//fast.fonts.net/jsapi/d3695ba5-8b42-43cc-aefa-3a1168f5423b.js"></script>
+    <script src="https://apis.google.com/js/api.js"></script>
   </body>
 </html>
