workign on video card

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,3 +3,4 @@
     margin: 0;
   }
 </style>
+<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400&display=swap" rel="stylesheet">
