--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -4,3 +4,5 @@
   }
 </style>
 <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400&display=swap" rel="stylesheet">
+
