--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>MyBord</title>
     <link rel="stylesheet" type="text/css" href="/app/application.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
