--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
     <div id="app"></div>
     <script src="/app/bundle.js"></script>
     <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
   </body>
 </html>
