--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,6 +3,6 @@
     margin: 0;
   }
 </style>
-<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500&display=swap" rel="stylesheet">
 
