--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <title>MyBord</title>
     <link rel="icon" type="image/png" href="/app/images/_/spa/components/neutrons/graphics/logo.png">
     <link rel="stylesheet" type="text/css" href="/app/application.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
